# project_agent

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py  worker.py
app/application/: __init__.py  ports.py  run_service.py
app/application/agent/: compaction.py  events.py  loop.py  specialists.py  subagent.py  tools.py
app/domain/: __init__.py  ids.py  memory.py  message.py  run.py  usage.py
app/infrastructure/: __init__.py  cancel.py  db.py  embedder.py  event_bus.py  llm.py  models.py  queue.py  redis.py  repositories.py
app/interface/: __init__.py
app/interface/api/: deps.py  health.py  runs.py
app/observability/: tracing.py
app/static/: index.html
eval/: __main__.py  dataset.json  harness.py
migrations/: env.py
migrations/versions/: 28cb3864331f_add_run_messages_table.py  a1b2c3d4e5f6_add_memories_table.py  c3d4e5f6a7b8_add_metrics_to_runs.py  e4170ff521ea_create_runs_table.py  edb836236fca_add_result_error_to_runs.py
scripts/: e2e_m1.sh  e2e_m10.sh  e2e_m11.sh  e2e_m2.sh  e2e_m3.sh  e2e_m4.sh  e2e_m5.sh  e2e_m6.sh  e2e_m8.sh  e2e_m9.sh
tests/: test_agent_loop.py  test_builtin_tools.py  test_compaction.py  test_embedder.py  test_eval_harness.py  test_eval_report.py  test_events.py  test_health.py  test_memory_domain.py  test_memory_tools.py  test_metered_llm.py  test_run_domain.py  test_run_service.py  test_specialists.py  test_subagent.py  test_tool_registry.py  test_tracing.py  test_usage_domain.py  test_worker.py
(+4 files in other folders)
